--- a/Classes/Class2/2.1
+++ b/Classes/Class2/2.1
@@ -27,3 +27,27 @@ sucessor(b(X,Y), b(0,Y1)) :-
 			X+Y<3,
 			X>0,
 			Y1 is X+Y.
+			
+% 2.1. a) 
+
+dfs(E, _, [E]):- estado_final(E).
+dfs(E, V, [E|R]):-
+			sucessor(E, E2),
+			\+ member(E2, V),
+			dfs(E2, [E2|V], R).
+			
+solve_dfs(S):-
+			estado_inicial(Ei),
+			dfs(Ei, [Ei], S).
+			
+% 2.2. b)
+
+bfs([[E|Cam]|_], [E|Cam]):- estado_final(E).
+bfs([[E|Cam]|R], S):-
+			findall([E2|[E|Cam]], (sucessor(E, E2), \+ member(E2,[E|Cam])), LS),
+			append(R, LS, L),
+			bfs(L, S).
+			
+solve_bfs(S):-
+			estado_inicial(Ei),
+			bfs([[Ei]],S).
