--- a/TODO.txt
+++ b/TODO.txt
@@ -8,18 +8,22 @@ Create Symbol Tables (with the following details):
 	- 1º parsing para as variáveis globais
 	- 2º parsing para as variaveis locais
 
-	- Criar class Symbol Table -> hashmap (String, Descriptor[Type, scope])
+	- Criar class Symbol Table -> hashmap (String, Descriptor[Type, scope]) 
+
+	---- Um colega meu deu-me sugestão: hashmap([type, name], [type, name, variavel inicializada ou nao]). Para as funcoes, cria-se uma symbol tale -> hashmap (FunctionName, FunctionObject). FunctionObject-> hashmap de todas as variaveis (hashmap igual ao primeiro). ----
+
 	- 2 Tipos -> Integer e Array
 
 Do the Semantic Analysis (Run the tree and compare it to the Symbol Tables to do this analysis)
 	- verificar se a variavel foi inicializada
+
 	- ter um set dessas variaveis 
 	- 
 ver se os tipos fazem sentidos para as operacoes a serem feitas
 	- 
-em a.size  -> a ï¿½ array
+em a.size  -> a e array
 	- 
-em a+b -> a ï¿½ inteiro
+em a+b -> a e inteiro
 	- 
 se nao for verdade da erro
 
