--- a/latex/specification/Award.vdmpp.tex
+++ b/latex/specification/Award.vdmpp.tex
@@ -55,3 +55,22 @@ class Award
 
 end Award
 \end{vdmpp}
+\bigskip
+\begin{longtable}{|l|r|r|r|}
+\hline
+Function or operation & Line & Coverage & Calls \\
+\hline
+\hline
+\hyperref[Award:22]{Award} & 22&100.0\% & 1 \\
+\hline
+\hyperref[getCategory:39]{getCategory} & 39&100.0\% & 1 \\
+\hline
+\hyperref[getEntity:35]{getEntity} & 35&100.0\% & 1 \\
+\hline
+\hyperref[getProduct:31]{getProduct} & 31&100.0\% & 1 \\
+\hline
+\hline
+Award.vdmpp & & 100.0\% & 4 \\
+\hline
+\end{longtable}
+
