--- a/latex/specification/Competition.vdmpp.tex
+++ b/latex/specification/Competition.vdmpp.tex
@@ -44,3 +44,20 @@ class Competition is subclass of Promotion
 
 end Competition
 \end{vdmpp}
+\bigskip
+\begin{longtable}{|l|r|r|r|}
+\hline
+Function or operation & Line & Coverage & Calls \\
+\hline
+\hline
+\hyperref[Competition:15]{Competition} & 15&100.0\% & 2 \\
+\hline
+\hyperref[addEntry:31]{addEntry} & 31&100.0\% & 2 \\
+\hline
+\hyperref[getEntries:27]{getEntries} & 27&100.0\% & 3 \\
+\hline
+\hline
+Competition.vdmpp & & 100.0\% & 7 \\
+\hline
+\end{longtable}
+
