--- a/latex/specification/CompetitionEntry.vdmpp.tex
+++ b/latex/specification/CompetitionEntry.vdmpp.tex
@@ -35,3 +35,20 @@ operations
    
 end CompetitionEntry
 \end{vdmpp}
+\bigskip
+\begin{longtable}{|l|r|r|r|}
+\hline
+Function or operation & Line & Coverage & Calls \\
+\hline
+\hline
+\hyperref[CompetitionEntry:11]{CompetitionEntry} & 11&100.0\% & 10 \\
+\hline
+\hyperref[hasWon:18]{hasWon} & 18&100.0\% & 4 \\
+\hline
+\hyperref[setWon:22]{setWon} & 22&100.0\% & 1 \\
+\hline
+\hline
+CompetitionEntry.vdmpp & & 100.0\% & 15 \\
+\hline
+\end{longtable}
+
