--- a/latex/specification/Coupon.vdmpp.tex
+++ b/latex/specification/Coupon.vdmpp.tex
@@ -43,3 +43,20 @@ class Coupon is subclass of Reward
      
 end Coupon
 \end{vdmpp}
+\bigskip
+\begin{longtable}{|l|r|r|r|}
+\hline
+Function or operation & Line & Coverage & Calls \\
+\hline
+\hline
+\hyperref[Coupon:18]{Coupon} & 18&100.0\% & 1 \\
+\hline
+\hyperref[getDiscount:27]{getDiscount} & 27&100.0\% & 2 \\
+\hline
+\hyperref[setDiscount:31]{setDiscount} & 31&100.0\% & 1 \\
+\hline
+\hline
+Coupon.vdmpp & & 100.0\% & 4 \\
+\hline
+\end{longtable}
+
