--- a/latex/specification/Entity.vdmpp.tex
+++ b/latex/specification/Entity.vdmpp.tex
@@ -30,3 +30,18 @@ class Entity
   
 end Entity
 \end{vdmpp}
+\bigskip
+\begin{longtable}{|l|r|r|r|}
+\hline
+Function or operation & Line & Coverage & Calls \\
+\hline
+\hline
+\hyperref[Entity:14]{Entity} & 14&100.0\% & 2 \\
+\hline
+\hyperref[getName:21]{getName} & 21&100.0\% & 1 \\
+\hline
+\hline
+Entity.vdmpp & & 100.0\% & 3 \\
+\hline
+\end{longtable}
+
