--- a/latex/specification/FreeProduct.vdmpp.tex
+++ b/latex/specification/FreeProduct.vdmpp.tex
@@ -42,3 +42,20 @@ class FreeProduct is subclass of Reward
    
 end FreeProduct
 \end{vdmpp}
+\bigskip
+\begin{longtable}{|l|r|r|r|}
+\hline
+Function or operation & Line & Coverage & Calls \\
+\hline
+\hline
+\hyperref[FreeProduct:17]{FreeProduct} & 17&100.0\% & 1 \\
+\hline
+\hyperref[getDiscount:30]{getDiscount} & 30&100.0\% & 1 \\
+\hline
+\hyperref[getName:26]{getName} & 26&100.0\% & 1 \\
+\hline
+\hline
+FreeProduct.vdmpp & & 100.0\% & 3 \\
+\hline
+\end{longtable}
+
