--- a/latex/specification/Giveaway.vdmpp.tex
+++ b/latex/specification/Giveaway.vdmpp.tex
@@ -38,3 +38,18 @@ class Giveaway is subclass of Competition
      
 end Giveaway
 \end{vdmpp}
+\bigskip
+\begin{longtable}{|l|r|r|r|}
+\hline
+Function or operation & Line & Coverage & Calls \\
+\hline
+\hline
+\hyperref[Giveaway:17]{Giveaway} & 17&100.0\% & 1 \\
+\hline
+\hyperref[getPercentage:29]{getPercentage} & 29&100.0\% & 1 \\
+\hline
+\hline
+Giveaway.vdmpp & & 100.0\% & 2 \\
+\hline
+\end{longtable}
+
