--- a/latex/specification/GiveawayEntry.vdmpp.tex
+++ b/latex/specification/GiveawayEntry.vdmpp.tex
@@ -63,3 +63,22 @@ operations
    
 end GiveawayEntry
 \end{vdmpp}
+\bigskip
+\begin{longtable}{|l|r|r|r|}
+\hline
+Function or operation & Line & Coverage & Calls \\
+\hline
+\hline
+\hyperref[GiveawayEntry:23]{GiveawayEntry} & 23&100.0\% & 2 \\
+\hline
+\hyperref[calculateResult:42]{calculateResult} & 42&100.0\% & 2 \\
+\hline
+\hyperref[getNumber:34]{getNumber} & 34&100.0\% & 2 \\
+\hline
+\hyperref[getPercentage:38]{getPercentage} & 38&100.0\% & 1 \\
+\hline
+\hline
+GiveawayEntry.vdmpp & & 100.0\% & 7 \\
+\hline
+\end{longtable}
+
