--- a/latex/specification/GiveawayTest.vdmpp.tex
+++ b/latex/specification/GiveawayTest.vdmpp.tex
@@ -13,6 +13,8 @@ class GiveawayTest
 @*)
   private testConstructor()==
   (
+    -- Normal scenario for creating giveaways,
+     -- as described in section 2.1 of the report, covering requirement R21.
       dcl c: Company := new Company("Asus", "", "", "");
       dcl b:Brand := new Brand("compaq", c);
       dcl cat: Category := new Category("office");
@@ -23,11 +25,11 @@ class GiveawayTest
    assertTrue(g.getRewards() = {r});
    assertTrue(g.getBrand() = b);
    assertTrue(g.getPercentage() = 30);
-  );
-  
 (*@
 \label{main:21}
 @*)
+  );
+  
   public static main()==
     (
    dcl g:GiveawayTest := new GiveawayTest();
