--- a/latex/specification/Promotion.vdmpp.tex
+++ b/latex/specification/Promotion.vdmpp.tex
@@ -73,3 +73,26 @@ class Promotion
 
 end Promotion
 \end{vdmpp}
+\bigskip
+\begin{longtable}{|l|r|r|r|}
+\hline
+Function or operation & Line & Coverage & Calls \\
+\hline
+\hline
+\hyperref[Promotion:25]{Promotion} & 25&100.0\% & 1 \\
+\hline
+\hyperref[getBrand:44]{getBrand} & 44&100.0\% & 4 \\
+\hline
+\hyperref[getName:36]{getName} & 36&100.0\% & 4 \\
+\hline
+\hyperref[getRewards:40]{getRewards} & 40&100.0\% & 4 \\
+\hline
+\hyperref[isActive:48]{isActive} & 48&100.0\% & 2 \\
+\hline
+\hyperref[setActive:52]{setActive} & 52&100.0\% & 1 \\
+\hline
+\hline
+Promotion.vdmpp & & 100.0\% & 16 \\
+\hline
+\end{longtable}
+
