--- a/latex/specification/QA.vdmpp.tex
+++ b/latex/specification/QA.vdmpp.tex
@@ -58,3 +58,22 @@ class QA
 
 end QA
 \end{vdmpp}
+\bigskip
+\begin{longtable}{|l|r|r|r|}
+\hline
+Function or operation & Line & Coverage & Calls \\
+\hline
+\hline
+\hyperref[QA:24]{QA} & 24&100.0\% & 12 \\
+\hline
+\hyperref[evalAnswer:41]{evalAnswer} & 41&100.0\% & 5 \\
+\hline
+\hyperref[getAnswer:37]{getAnswer} & 37&100.0\% & 1 \\
+\hline
+\hyperref[getQuestion:33]{getQuestion} & 33&100.0\% & 1 \\
+\hline
+\hline
+QA.vdmpp & & 100.0\% & 19 \\
+\hline
+\end{longtable}
+
