--- a/latex/specification/Quiz.vdmpp.tex
+++ b/latex/specification/Quiz.vdmpp.tex
@@ -37,3 +37,18 @@ class Quiz is subclass of Competition
 
 end Quiz
 \end{vdmpp}
+\bigskip
+\begin{longtable}{|l|r|r|r|}
+\hline
+Function or operation & Line & Coverage & Calls \\
+\hline
+\hline
+\hyperref[Quiz:15]{Quiz} & 15&100.0\% & 2 \\
+\hline
+\hyperref[getQuiz:27]{getQuiz} & 27&100.0\% & 1 \\
+\hline
+\hline
+Quiz.vdmpp & & 100.0\% & 3 \\
+\hline
+\end{longtable}
+
