--- a/latex/specification/QuizEntry.vdmpp.tex
+++ b/latex/specification/QuizEntry.vdmpp.tex
@@ -73,3 +73,24 @@ class QuizEntry is subclass of CompetitionEntry
 
 end QuizEntry
 \end{vdmpp}
+\bigskip
+\begin{longtable}{|l|r|r|r|}
+\hline
+Function or operation & Line & Coverage & Calls \\
+\hline
+\hline
+\hyperref[QuizEntry:21]{QuizEntry} & 21&100.0\% & 5 \\
+\hline
+\hyperref[addAnswer:31]{addAnswer} & 31&100.0\% & 6 \\
+\hline
+\hyperref[calculateResult:48]{calculateResult} & 48&100.0\% & 2 \\
+\hline
+\hyperref[getAnswers:44]{getAnswers} & 44&100.0\% & 2 \\
+\hline
+\hyperref[getQuiz:40]{getQuiz} & 40&100.0\% & 1 \\
+\hline
+\hline
+QuizEntry.vdmpp & & 100.0\% & 16 \\
+\hline
+\end{longtable}
+
