--- a/latex/specification/Retailer.vdmpp.tex
+++ b/latex/specification/Retailer.vdmpp.tex
@@ -32,3 +32,18 @@ class Retailer is subclass of ContainingProducts
 
 end Retailer
 \end{vdmpp}
+\bigskip
+\begin{longtable}{|l|r|r|r|}
+\hline
+Function or operation & Line & Coverage & Calls \\
+\hline
+\hline
+\hyperref[Retailer:15]{Retailer} & 15&100.0\% & 1 \\
+\hline
+\hyperref[getName:23]{getName} & 23&100.0\% & 1 \\
+\hline
+\hline
+Retailer.vdmpp & & 100.0\% & 2 \\
+\hline
+\end{longtable}
+
