--- a/latex/specification/AwardTest.vdmpp.tex
+++ b/latex/specification/AwardTest.vdmpp.tex
@@ -13,6 +13,8 @@ class AwardTest
 @*)
   private testConstructor()==
   (
+    -- Normal scenario for creating and listing rewards,
+     -- as described in section 2.1 of the report, covering requirement R27 and R30.
    dcl e:Entity := new Entity("Certificado de qualidade");
    dcl cat:Category := new Category("vegetables"); 
       dcl c: Company := new Company("Sonae MC", "", "", "");
@@ -22,11 +24,11 @@ class AwardTest
    assertTrue(a.getProduct() = p);
    assertTrue(a.getEntity() = e);
    assertTrue(a.getCategory() = cat);
-  );
-  
 (*@
 \label{main:20}
 @*)
+  );
+  
   public static main()==
     (
    dcl a:AwardTest := new AwardTest();
