--- a/latex/specification/CompanyTest.vdmpp.tex
+++ b/latex/specification/CompanyTest.vdmpp.tex
@@ -13,16 +13,18 @@ class CompanyTest
 @*)
   private testConstructor()==
   (
+   -- Normal scenario for creating and listing companies,
+     -- as described in section 2.1 of the report, covering requirement R01 and R03.
    dcl c: Company := new Company("1", "2", "3", "4");
    assertTrue(c.getName() = "1");
    assertTrue(c.getAddress() = "2");
    assertTrue(c.getEmail() = "3");
    assertTrue(c.getWebsite() = "4");
-  );
- 
 (*@
 \label{main:16}
 @*)
+  );
+ 
   public static main()==
     (
    dcl c:CompanyTest := new CompanyTest();
