--- a/latex/specification/CouponTest.vdmpp.tex
+++ b/latex/specification/CouponTest.vdmpp.tex
@@ -13,6 +13,8 @@ class CouponTest
 @*)
   private testConstructor()==
   (
+    -- Normal scenario for creating coupons as rewards,
+     -- as described in section 2.1 of the report, covering requirement R24.
     dcl cat: Category := new Category("office");
    dcl c: Company := new Company("Asus", "", "", "");
    dcl b: Brand := new Brand("compaq", c);
@@ -23,11 +25,11 @@ class CouponTest
    assertTrue(coup.getDiscount() = 30);
    coup.setDiscount(25);
    assertTrue(coup.getDiscount() = 25);
-  );
- 
 (*@
 \label{main:21}
 @*)
+  );
+ 
   public static main()==
     (
    dcl c:CouponTest := new CouponTest();
