--- a/latex/specification/GiveawayEntryTest.vdmpp.tex
+++ b/latex/specification/GiveawayEntryTest.vdmpp.tex
@@ -13,26 +13,28 @@ class GiveawayEntryTest
 @*)
   private testConstructor()==
   (
+    -- Normal scenario for playing giveaways,
+     -- as described in section 2.1 of the report, covering requirement R34.
    dcl g: GiveawayEntry := new GiveawayEntry(30);
    assertTrue(g.hasWon() = false);
    assertTrue(g.getNumber() = -1);
    assertTrue(g.getPercentage() = 30);
-  );
-
 (*@
 \label{testCalculateResult:15}
 @*)
+  );
+
   private testCalculateResult()==
   (
    dcl g: GiveawayEntry := new GiveawayEntry(30);
    if g.calculateResult() = true
     then assertTrue(g.getNumber() <= 30)
     else assertTrue(g.getNumber() > 30);
-  );
-  
 (*@
 \label{main:23}
 @*)
+  );
+  
   public static main()==
     (
    dcl get:GiveawayEntryTest := new GiveawayEntryTest();
