--- a/latex/specification/PromotionTest.vdmpp.tex
+++ b/latex/specification/PromotionTest.vdmpp.tex
@@ -13,6 +13,8 @@ class PromotionTest
 @*)
   private testConstructor()==
   (
+    -- Normal scenario for creating and listing promotions,
+     -- as described in section 2.1 of the report, covering requirement R16, R17 and R19.
       dcl c: Company := new Company("Asus", "", "", "");
       dcl b:Brand := new Brand("compaq", c);
       dcl cat: Category := new Category("office");
@@ -22,11 +24,11 @@ class PromotionTest
    assertTrue(g.getName() = "prom");
    assertTrue(g.getRewards() = {r});
    assertTrue(g.getBrand() = b);
-  );
- 
 (*@
 \label{main:20}
 @*)
+  );
+ 
   public static main()==
     (
    dcl p:PromotionTest := new PromotionTest();
