--- a/latex/specification/QuizEntryTest.vdmpp.tex
+++ b/latex/specification/QuizEntryTest.vdmpp.tex
@@ -13,16 +13,18 @@ class QuizEntryTest
 @*)
   private testConstructor()==
   (
+    -- Normal scenario for playing quizes,
+     -- as described in section 2.1 of the report, covering requirement R33.
    dcl qa1:QA := new QA("Date of foundation?", "1997");
    dcl qa2:QA := new QA("Company full name?", "Asus, lda");
    dcl quizEntry: QuizEntry := new QuizEntry({qa1, qa2});
    assertTrue(quizEntry.getQuiz() = {qa1, qa2});
    assertTrue(quizEntry.getAnswers() = { |-> });
-   assertTrue(not quizEntry.hasWon());
-  );
 (*@
 \label{testAddAnswer:16}
 @*)
+   assertTrue(not quizEntry.hasWon());
+  );
   private testAddAnswer()==
   (
    dcl qa1:QA := new QA("Date of foundation?", "1997");
@@ -31,11 +33,11 @@ class QuizEntryTest
    quizEntry.addAnswer(qa1, "1997");
    quizEntry.addAnswer(qa2, "Asus, lda");
    assertTrue(quizEntry.getAnswers() = { qa1 |-> "1997", qa2 |-> "Asus, lda" });
-   
-  );
 (*@
 \label{testCalculateResult:26}
 @*)
+   
+  );
   private testCalculateResult()==
   (
    dcl qa1:QA := new QA("Date of foundation?", "1997");
@@ -49,11 +51,11 @@ class QuizEntryTest
    assertTrue(quizEntry1.calculateResult());
    assertTrue(not quizEntry2.calculateResult());
    
-  );
-  
 (*@
 \label{main:41}
 @*)
+  );
+  
   public static main()==
     (
    dcl qet:QuizEntryTest := new QuizEntryTest();
