--- a/latex/specification/QuizTest.vdmpp.tex
+++ b/latex/specification/QuizTest.vdmpp.tex
@@ -13,6 +13,8 @@ class QuizTest
 @*)
   private testConstructor()==
   (
+    -- Normal scenario for creating quizes,
+     -- as described in section 2.1 of the report, covering requirement R20.
    dcl qa1:QA := new QA("Date of foundation?", "1997");
    dcl qa2:QA := new QA("Company full name?", "Asus, lda");
    dcl c: Company := new Company("Asus", "", "", "");
@@ -24,11 +26,11 @@ class QuizTest
    assertTrue(quiz.getName() = "Quiz1");
    assertTrue(quiz.getRewards() = {r});
    assertTrue(quiz.getBrand() = b);
-   assertTrue(quiz.getQuiz() = {qa1,qa2});
-  );
 (*@
 \label{testAddEntry:22}
 @*)
+   assertTrue(quiz.getQuiz() = {qa1,qa2});
+  );
   private testAddEntry()==
    (
    dcl qa1:QA := new QA("Date of foundation?", "1997");
@@ -43,11 +45,11 @@ class QuizTest
    quiz.addEntry(quizEntry);
    assertTrue(quiz.getEntries() = [quizEntry]);
       
-  );
-  
 (*@
 \label{main:38}
 @*)
+  );
+  
   public static main()==
     (
    dcl qt:QuizTest := new QuizTest();
