--- a/latex/specification/Reward.vdmpp.tex
+++ b/latex/specification/Reward.vdmpp.tex
@@ -44,3 +44,20 @@ class Reward
    
 end Reward
 \end{vdmpp}
+\bigskip
+\begin{longtable}{|l|r|r|r|}
+\hline
+Function or operation & Line & Coverage & Calls \\
+\hline
+\hline
+\hyperref[Reward:18]{Reward} & 18&100.0\% & 9 \\
+\hline
+\hyperref[getName:26]{getName} & 26&100.0\% & 2 \\
+\hline
+\hyperref[getProduct:30]{getProduct} & 30&100.0\% & 3 \\
+\hline
+\hline
+Reward.vdmpp & & 100.0\% & 14 \\
+\hline
+\end{longtable}
+
