--- a/latex/specification/RewardTest.vdmpp.tex
+++ b/latex/specification/RewardTest.vdmpp.tex
@@ -13,6 +13,8 @@ class RewardTest
 @*)
   private testConstructor()==
   (
+    -- Normal scenario for listing rewards,
+     -- as described in section 2.1 of the report, covering requirement R26.
     dcl cat: Category := new Category("office");
    dcl c: Company := new Company("Asus", "", "", "");
    dcl b: Brand := new Brand("compaq", c);
@@ -20,11 +22,11 @@ class RewardTest
    dcl r: Reward := new Reward("rwrd", p);
    assertTrue(r.getName() = "rwrd");
    assertTrue(r.getProduct() = p);
-  );
- 
 (*@
 \label{main:18}
 @*)
+  );
+ 
   public static main()==
     (
    dcl r:RewardTest := new RewardTest();
