--- a/latex/specification/UserTest.vdmpp.tex
+++ b/latex/specification/UserTest.vdmpp.tex
@@ -21,14 +21,16 @@ class UserTest
 @*)
   private testConstructor()==
   (
+    -- Normal scenario for creating and listing users,
+     -- as described in section 2.1 of the report, covering requirement R10 and R12.
    dcl usr: User := new User("1", "2");
    assertTrue(usr.getName() = "1");
    assertTrue(usr.getEmail() = "2");
-  );
-  
 (*@
 \label{main:19}
 @*)
+  );
+  
   public static main()==
     (
    dcl r:UserTest := new UserTest();
